Correção de algumas classes e lógicas da interface, adição da classe Propriedade e associação de equinos a essa propriedade, assim como um relatório por propriedade, algumas classes de test possuem erros e serão corrigidas no proximo commit